samples/_failures_safe/1761313920_2b2ff1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cd6de32.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_3cd6de32.c:162:9: error: expected declaration or statement at end of input
  162 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_3cd6de32.c:162:9: error: expected declaration or statement at end of input
